--- a/.github/workflows/agi_mire_ci_cd.yml
+++ b/.github/workflows/agi_mire_ci_cd.yml
@@ -1,174 +1,166 @@
-name: AGI_MIRE CI/CD
+name: AGI_MIRE_CI_CD
 
 on:
   push:
-    branches: ["main", "develop"]
+    branches: [ "main", "develop" ]
   pull_request:
-    branches: ["main", "develop"]
+    branches: [ "main", "develop" ]
   workflow_dispatch:
 
-permissions:
-  contents: write
-  actions: read
+env:
+  PYTHON_VERSION: "3.12"
+  POETRY_VERSION: "1.8.3"
 
 jobs:
-
-  ###########################################################################
-  # 1. CHECKOUT + SETUP PYTHON
-  ###########################################################################
   setup:
-    name: Setup Environment
+    name: Preparar Ambiente
     runs-on: ubuntu-latest
     outputs:
-      python-version: ${{ steps.set.outputs.python_version }}
+      cache-hit: ${{ steps.cache.outputs.cache-hit }}
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.12
-        id: set
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Cache pip dependencies
+      - name: Configurar Cache
+        id: cache
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          path: ~/.cache/pypoetry
+          key: poetry-cache-${{ hashFiles('**/poetry.lock') }}
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-asyncio pytest-cov anyio
+      - name: Instalar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
 
-  ###########################################################################
-  # 2. LINT + STATIC ANALYSIS + SECURITY
-  ###########################################################################
-  lint_security:
-    name: Lint & Security Checks
-    needs: setup
+      - name: Instalar Poetry
+        run: pip install poetry==${{ env.POETRY_VERSION }}
+
+      - name: Instalar Dependências
+        run: poetry install --no-root
+
+
+  lint:
+    name: Lint & Static Analysis
     runs-on: ubuntu-latest
+    needs: setup
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Tools
+      - name: Instalar Ferramentas
         run: |
-          pip install black isort flake8 bandit safety
+          pip install flake8 bandit safety
 
-      - name: Run Black
-        run: black --check .
-
-      - name: Run isort
-        run: isort --check-only .
-
-      - name: Run flake8
+      - name: Executar Flake8
         run: flake8 .
 
-      - name: Security Scan (Bandit)
-        run: bandit -r .
+      - name: Security Scan - Bandit
+        run: bandit -r core -ll -iii
 
-      - name: Dependency Security (Safety)
-        run: safety check -r requirements.txt
+      - name: Security Scan - Safety
+        run: safety check
 
-  ###########################################################################
-  # 3. UNIT TESTS
-  ###########################################################################
+
   tests:
-    name: Unit Tests
-    needs: lint_security
+    name: Testes (Unitários + Integração + Stress)
     runs-on: ubuntu-latest
+    needs: [setup, lint]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Pytest (Unit)
-        run: |
-          pytest tests/unit --maxfail=1 --disable-warnings -q
+      - name: Instalar Dependências
+        run: poetry install --no-root
 
-  ###########################################################################
-  # 4. INTEGRATION TESTS
-  ###########################################################################
-  integration:
-    name: Integration Tests
-    needs: tests
-    runs-on: ubuntu-latest
+      - name: Testes Unitários
+        run: poetry run pytest -q tests/unit
 
-    steps:
-      - uses: actions/checkout@v4
+      - name: Testes de Integração
+        run: poetry run pytest -q tests/integration
 
-      - name: Run Pytest (Integration)
-        run: |
-          pytest tests/integration --disable-warnings --cov=core --cov-report=xml
+      - name: Testes de Stress (SimLog V1.4, PRAG, RegVet)
+        run: poetry run pytest -q tests/stress --maxfail=1
 
-      - name: Upload Coverage Report
+      - name: Relatório de Cobertura
+        run: poetry run pytest --cov=core --cov-report=xml
+
+      - name: Upload Coverage
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report
+          name: coverage-xml
           path: coverage.xml
 
-  ###########################################################################
-  # 5. STRESS TESTS — SIMLOG V1.4
-  ###########################################################################
-  stress:
-    name: SimLog Stress Tests (200–500 cycles)
-    needs: integration
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
 
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run SimLog Stress Test
-        run: |
-          pytest tests/test_simlog_stress.py --disable-warnings -q
-
-  ###########################################################################
-  # 6. BUILD PACKAGE
-  ###########################################################################
   build:
-    name: Build Release
-    needs: stress
+    name: Build e Empacotamento
     runs-on: ubuntu-latest
+    needs: tests
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build Python Package
-        run: |
-          pip install build
-          python -m build
+      - name: Build do Pacote
+        run: poetry build
 
-      - name: Upload Build Artifact
+      - name: Upload Build
         uses: actions/upload-artifact@v4
         with:
           name: agi_mire_build
           path: dist/
 
-  ###########################################################################
-  # 7. DEPLOY (MANUAL GATE)
-  ###########################################################################
-  deploy:
-    name: Production Deploy
-    needs: build
+
+  deploy_prod:
+    name: Deploy em Produção
     runs-on: ubuntu-latest
+    needs: build
     if: github.ref == 'refs/heads/main'
 
     environment:
       name: production
-      url: https://example.com
+      url: https://api.agi-mire.prod
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Deploy Package
-        run: |
-          echo ">>> Deploying AGI_MIRE to production..."
-          # coloque seu deploy real aqui (SSH, FTP, API, artifact, etc.)
-          echo "DONE"
+      - name: Download Build
+        uses: actions/download-artifact@v4
+        with:
+          name: agi_mire_build
 
+      - name: Validar Versão e Assinatura
+        run: |
+          python scripts/verify_signature.py dist/*.whl
+          python scripts/check_version_bump.py
+
+      - name: Deploy Real
+        run: |
+          bash scripts/deploy_prod.sh dist/*.whl
+
+      - name: Registrar Evento PRAG
+        run: |
+          curl -X POST "$CONTROLBUS_URL/emit" \
+            -H "Content-Type: application/json" \
+            -d '{"event":"DEPLOY_COMPLETED","metadata":{"version":"latest"}}'
+
+      - name: Publicar Build
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/*
+
+
+  rollback:
+    name: Rollback
+    runs-on: ubuntu-latest
+    if: failure()
+
+    steps:
+      - name: Rollback Automático
+        run: bash scripts/rollback.sh
+
+      - name: Registrar Evento PRAG
+        run: |
+          curl -X POST "$CONTROLBUS_URL/emit" \
+            -H "Content-Type: application/json" \
+            -d '{"event":"DEPLOY_ROLLBACK"}'
