--- a/.github/workflows/agi_mire_ci_cd.yml
+++ b/.github/workflows/agi_mire_ci_cd.yml
@@ -1,83 +1,127 @@
-name: AGI_MIRE_CI_CD
+name: AGI_MIRE CI/CD
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
+
+env:
+  PYTHON_VERSION: "3.12"
+  POETRY_HOME: ~/.poetry
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-
+  prepare:
+    name: "Prepare Environment"
+    runs-on: ${{ github.event.inputs.runner_type || 'ubuntu-latest' }}
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # ============================================================
-    # LIBERAR DISCO — ESSENCIAL PARA EVITAR "NO SPACE LEFT"
-    # ============================================================
-    - name: Free Up Disk Space (40–60 GB)
-      run: |
-        echo "Before cleanup:"
-        df -h
+      # Remove toolchains pesadas do runner para ganhar espaço
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo docker system prune -af || true
+          df -h
 
-        echo "Removing huge pre-installed tool caches..."
-        sudo rm -rf /opt/hostedtoolcache/* || true
-        sudo rm -rf /usr/local/lib/android || true
-        sudo rm -rf "$AGENT_TOOLSDIRECTORY" || true
-        sudo rm -rf /usr/local/share/boost || true
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
 
-        echo "Removing large SDKs & languages unused by this project..."
-        sudo rm -rf /usr/share/dotnet || true
-        sudo rm -rf /usr/local/share/powershell || true
-        sudo rm -rf /usr/local/share/swift || true
-        sudo rm -rf /usr/lib/jvm || true
+      # Cache dos pacotes para acelerar reinstalação
+      - name: Cache pip packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            pip-${{ runner.os }}-
 
-        echo "Cleaning apt cache..."
-        sudo apt-get clean
-        sudo rm -rf /var/lib/apt/lists/*
+      - name: Install dependencies (minimal)
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          df -h
 
-        echo "After cleanup:"
-        df -h
+      # Salva ambiente para próximos jobs
+      - name: Upload venv
+        uses: actions/upload-artifact@v4
+        with:
+          name: agi-env
+          path: ~/.cache/pip
+          retention-days: 1
 
-    # ============================================================
-    # PYTHON ENVIRONMENT
-    # ============================================================
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+  tests:
+    name: "Run Unit and Integration Tests"
+    needs: prepare
+    runs-on: ${{ github.event.inputs.runner_type || 'ubuntu-latest' }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Install pip and wheel
-      run: |
-        python -m pip install --upgrade pip wheel setuptools
+      - name: Restore pip cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
 
-    # ============================================================
-    # INSTALAR DEPENDÊNCIAS
-    # ============================================================
-    - name: Install project dependencies
-      run: |
-        if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-        else
-            echo "requirements.txt not found, skipping."
-        fi
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    # ============================================================
-    # TESTES UNITÁRIOS
-    # ============================================================
-    - name: Run test suite with pytest
-      run: |
-        pytest -vv --maxfail=1 --disable-warnings
+      - name: Run Tests
+        run: |
+          pytest -q --disable-warnings --maxfail=1
+        continue-on-error: false
 
-    # ============================================================
-    # UPLOAD DE ARTEFATOS EM CASO DE FALHA
-    # ============================================================
-    - name: Upload pytest results (in case of failure)
-      if: failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: pytest-logs
-        path: ./
+      - name: Upload test results
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-failures
+          path: .
+          retention-days: 7
 
+  build:
+    name: "Build Package"
+    needs: tests
+    runs-on: ${{ github.event.inputs.runner_type || 'ubuntu-latest' }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install build tools
+        run: |
+          pip install --upgrade pip
+          pip install build
+
+      - name: Build wheel and sdist
+        run: python -m build
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: agi_mire_build
+          path: dist/
+          retention-days: 7
+
+  deploy:
+    name: "Deployment Stage"
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    runs-on: ${{ github.event.inputs.runner_type || 'ubuntu-latest' }}
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: agi_mire_build
+          path: dist/
+
+      - name: Placeholder deploy step
+        run: |
+          echo "Add production deployment steps here."
+          ls -lh dist/
